Add MemNode support
This commit adds support for PeakRDL MemNode objects.
Register arrays inside MemNode are not being unrolled
to keep memory description brief.
Memories can hold hundreds or even more virtual registers
and unrolling all of them is not beneficial and mudders
the overall picture.

Signed-off-by: Maciej Dudek <mdudek@antmicro.com>

--- a/example/accelera_generic_example.rdl
+++ b/example/accelera_generic_example.rdl
@@ -194,6 +194,7 @@ addrmap some_register_map {
       external mem {
           mementries = 1;
           memwidth = 32;
+          myReg regs [1];
       } REGS @ 0x00;
   } empty_addrmap @0x2000;
 
